[package]
name = "distance-bytes-dumper"
version = "0.0.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
color-backtrace = "0.5"
distance-bytes = { path = "../distance-bytes" }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
