[package]
name = "distance-bytes"
version = "0.1.0"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5"
combine = "4"
enum-primitive-derive = "0.2"
mint = { version = "0.5", features = ["serde"] }
nom = "6"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
widestring = "0.4"
