[package]
name = "distance-bytes"
version = "0.0.1"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
auto_impl = "0.4"
byteorder = "1"
enum-primitive-derive = "0.2"
mint = { version = "0.5", features = ["serde"] }
num-traits = "0.2"
paste = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
widestring = "0.4"
