[package]
name = "distance-bytes"
version = "0.0.1"
authors = ["Brian Bowman <seeker14491@gmail.com>"]
edition = "2018"

[dev-dependencies]
insta = "1"
pretty-hex = "0.2"

[dependencies]
anyhow = "1"
auto_impl = "0.4"
byteorder = "1"
chrono = "0.4"
epochs = "0.2"
mint = { version = "0.5", features = ["serde"] }
num_enum = "0.5"
paste = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
vast-enum = { git = "https://github.com/Seeker14491/vast-enum.git", features = ["serde"] }
widestring = "0.4"
